Updated natamus.com to new design

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,225 +9,12 @@
 }
 
 html, body {
-	font-family: "Roboto";
-	background-color: rgb(224, 234, 240);
+	font-family: "Roboto", serif;
+	background-color: #3b5669;
 
 	width: 100vh;
 	overflow-x: hidden
 }
-
-a {
-	color: black;
-	font-weight: bolder;
-	text-decoration: none;
-}
-a:hover {
-	cursor: pointer;
-	color: rgb(0, 169, 227);
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-/* Background colours */
-.contactwrapper {
-	background-color: rgb(224, 234, 240);
-}
-.menuwrapper {
-	background-color: rgb(224, 234, 240);
-}
-
-/* pre increase */
-.menuwrapper, #contact {
-	opacity: 0;
-}
-
-p, h1, h2 {
-	color: black;
-	letter-spacing: 0.02em;
-	margin-bottom: 0;
-}
-
-.mainwrapper {
-	position: absolute;
-	width: 100%;
-	top: 50px;
-	left: 0;
-
-	text-align: center;
-
-	margin-bottom: 80px;
-}
-
-.menuwrapper {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 10;
-
-	width: 100%;
-	height: 36px;
-
-	font-weight: bolder;
-	font-size: 20px;
-	border-bottom: 2.5px solid rgb(78, 92, 117);
-
-	overflow-x: scroll;
-	overflow-y: hidden;
-	white-space: nowrap;
-}
-.menuwrapper a {
-	position: relative;
-	top: 6px;
-}
-.menuwrapper a:not(:first-child) {
-	margin-left: 15px;
-}
-
-.menuwrapper .logowrapper {
-	position: absolute;
-	left: 6px;
-	top: 1px;
-}
-.menuwrapper .logowrapper img {
-	width: 50px;
-}
-
-/* Pages Selector*/
-.pageswrapper {
-	font-size: 15px;
-
-	padding-bottom: 10px;
-	border-bottom: dashed darkgray 1.5px;
-
-	overflow-x: scroll;
-	overflow-y: hidden;
-	white-space: nowrap;
-}
-.pageswrapper p {
-	margin: 0;
-}
-
-.pageswrapper span:not(:last-child) {
-	padding-right: 10px;
-}
-.pageswrapper span {
-
-}
-.pageswrapper span.selected {
-	font-weight: bolder;
-}
-.pageswrapper span:hover {
-	cursor: pointer;
-	color: rgb(0, 169, 227);
-}
-
-/* Contact Natamus */
-.contactwrapper {
-	position: fixed;
-	right: 0;
-	bottom: 0;
-
-	border-top: 2.5px solid rgb(78, 92, 117);
-	border-left: 2.5px solid rgb(78, 92, 117);
-}
-.contactwrapper.radius {
-	border-top-left-radius: 25px;
-}
-.contactwrapper .contactme {
-	margin: 8px;
-}
-.contactwrapper .contactme:hover {
-	cursor: pointer;
-}
-.contactwrapper .contactme img {
-	display: inline;
-	width: 40px;
-}
-.contactwrapper .contactme p {
-	position: relative;
-	display: inline;
-	top: -5px;
-}
-
-.contactwrapper .contactform {
-	padding: 4px 8px 8px 8px;
-	min-width: 266px;
-}
-.contactwrapper .contactform input:not(.answer),
-.contactwrapper .contactform textarea {
-	display: block;
-	margin: 3px;
-	padding-left: 5px;
-}
-.contactwrapper .contactform input {
-	height: 20px;
-	width: 252px;
-	border: 1px solid #3e4247;
-}
-.contactwrapper .contactform textarea {
-	height: 150px;
-	width: 250px;
-	resize: none;
-	border: 1px solid #3e4247;
-}
-.contactwrapper .contactform h2 {
-	margin: 0;
-	padding-left: 4px;
-}
-.contactwrapper .contactform p.t {
-	margin: 0;
-	margin-bottom: 6px;
-	padding-left: 4px;
-}
-.contactwrapper .contactform .cclose {
-	font-size: 40px;
-	position: absolute;
-	margin-top: -10px;
-	right: 10px;
-}
-.contactwrapper .contactform .cclose:hover {
-	cursor: pointer;
-	color: red;
-}
-.contactwrapper .bottom button,
-.contactwrapper .bottom p,
-.contactwrapper .bottom input {
-	display: inline;
-}
-.contactwrapper .bottom {
-	text-align: right;
-	margin-top: 5px;
-	margin-right: 4px;
-}
-.contactwrapper .bottom button {
-	position: absolute;
-	margin-left: -258px;
-
-	height: 25px;
-	background: transparent;
-	border-radius: 5px;
-	color: black;
-}
-.contactwrapper .bottom button:hover {
-	cursor: pointer;
-}
-.contactwrapper .bottom .answer {
-	text-align: center;
-	width: 20px;
-}
-.contactwrapper .bottom .answer::-webkit-inner-spin-button,
-.contactwrapper .bottom .answer::-webkit-outer-spin-button {
-	-webkit-appearance: none; 
-}
-.contactwrapper .confirmmessage {
-	margin-left: 10px;
-}
-.contactwrapper .confirmmessage a:hover {
-	cursor: pointer;
-}
-/* End Contact Natamus */
 
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
